--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id 'war'
 	id 'org.springframework.boot' version '2.7.11'
 	id 'io.spring.dependency-management' version '1.1.0'
-	id "org.sonarqube" version "3.5.0.2730"
-	id "jacoco"
+	id "org.sonarqube" version "4.2.1.3168"
+	id 'jacoco'
 }
 
 group = 'com.example.junit'
@@ -30,19 +30,18 @@ tasks.named('sonarqube').configure {
 }
 
 sonarqube {
-	properties {
-		property "sonar.projectKey", "CarlosGuzman02_demo"
-		property "sonar.organization", "carlosguzman02"
-		property "sonar.host.url", "https://sonarcloud.io"
-	}
+  properties {
+    property "sonar.projectKey", "CarlosGuzman02_demo"
+    property "sonar.organization", "carlosguzman02"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 
-	jacocoTestReport{
+jacocoTestReport{
 		reports{
 			xml.enabled true
 		}
 	}
 test.finalizedBy jacocoTestReport
-
-}
 
 
